deps/v8/test/message/fail/modules-duplicate-export1.out
*%(basename)s:8: SyntaxError: Duplicate export of 'x'
export let x = 42;
       ^^^^^^^^^^^
SyntaxError: Duplicate export of 'x'

